[gd_scene load_steps=33 format=3 uid="uid://b2tdk0f1ampod"]

[ext_resource type="Script" path="res://Player.gd" id="1_5b45u"]
[ext_resource type="Texture2D" uid="uid://rcdites5bghi" path="res://assets/player/Character1/no hands/death_0.png" id="3_qolrr"]
[ext_resource type="Texture2D" uid="uid://c1e4df7f5dipm" path="res://assets/player/Character1/no hands/death_1.png" id="4_4yq0u"]
[ext_resource type="Texture2D" uid="uid://dai3rwta4rxvn" path="res://assets/player/Character1/no hands/death_2.png" id="5_4jnnf"]
[ext_resource type="Texture2D" uid="uid://d1n3k3nl62gjw" path="res://assets/player/Character1/no hands/death_3.png" id="6_ovd0p"]
[ext_resource type="Texture2D" uid="uid://bpn08na4olims" path="res://assets/player/Character1/no hands/death_4.png" id="7_2qed7"]
[ext_resource type="Texture2D" uid="uid://bsbll84yy02xp" path="res://assets/player/Character1/no hands/death_5.png" id="8_67cr0"]
[ext_resource type="Texture2D" uid="uid://cinhuwls2ywg0" path="res://assets/player/Character1/no hands/death_6.png" id="9_qlrrq"]
[ext_resource type="Texture2D" uid="uid://dhb3t5u6mfkoy" path="res://assets/player/Character1/no hands/death_7.png" id="10_k405t"]
[ext_resource type="Texture2D" uid="uid://c7bqo8odov7nx" path="res://assets/player/Character1/no hands/death_8.png" id="11_l7idy"]
[ext_resource type="Texture2D" uid="uid://djkhmv2dsfvva" path="res://assets/player/Character1/no hands/death_9.png" id="12_06nbi"]
[ext_resource type="Texture2D" uid="uid://cyov3hpvnq080" path="res://assets/player/Character1/no hands/hit_0.png" id="13_uej87"]
[ext_resource type="Texture2D" uid="uid://t3v3vmohbf6" path="res://assets/player/Character1/no hands/hit_1.png" id="14_dmvs2"]
[ext_resource type="Texture2D" uid="uid://87qyr0psa664" path="res://assets/player/Character1/no hands/hit_2.png" id="15_s565p"]
[ext_resource type="Texture2D" uid="uid://bqfg3p2o25jx2" path="res://assets/player/Character1/no hands/idle_0.png" id="16_o1ats"]
[ext_resource type="Texture2D" uid="uid://b884nbkcdxanh" path="res://assets/player/Character1/no hands/idle_1.png" id="17_rntk6"]
[ext_resource type="Texture2D" uid="uid://bkgde1ocwi1cy" path="res://assets/player/Character1/no hands/idle_2.png" id="18_633ie"]
[ext_resource type="Texture2D" uid="uid://gcw5p0u1ee8x" path="res://assets/player/Character1/no hands/idle_3.png" id="19_lk2ej"]
[ext_resource type="Texture2D" uid="uid://deaydlj6hx35r" path="res://assets/player/Character1/no hands/idle_4.png" id="20_j6py5"]
[ext_resource type="Texture2D" uid="uid://d4a5bwpg7kqsn" path="res://assets/player/Character1/no hands/idle_5.png" id="21_0f1st"]
[ext_resource type="Texture2D" uid="uid://cal32pvb8xg3a" path="res://assets/player/Character1/no hands/walk_0.png" id="22_3iyn6"]
[ext_resource type="Texture2D" uid="uid://c142syc5mw3oo" path="res://assets/player/Character1/no hands/walk_1.png" id="23_hsr46"]
[ext_resource type="Texture2D" uid="uid://crpai6kpt1thx" path="res://assets/player/Character1/no hands/walk_2.png" id="24_qvk7n"]
[ext_resource type="Texture2D" uid="uid://ry7g53g4u4pk" path="res://assets/player/Character1/no hands/walk_3.png" id="25_5a63g"]
[ext_resource type="Texture2D" uid="uid://dqurnf7jslsy1" path="res://assets/player/Character1/no hands/walk_4.png" id="26_o2a2m"]
[ext_resource type="Texture2D" uid="uid://cqlw63dlyx3gw" path="res://assets/player/Character1/no hands/walk_5.png" id="27_ohcjh"]
[ext_resource type="Texture2D" uid="uid://dqvtcd447nufa" path="res://assets/player/Character1/no hands/walk_6.png" id="28_mvy6x"]
[ext_resource type="Texture2D" uid="uid://b70r2pbgobkhk" path="res://assets/player/Character1/no hands/walk_7.png" id="29_ccdy8"]
[ext_resource type="PackedScene" uid="uid://drk83sv2v3ob" path="res://DEBUG/UI.tscn" id="30_8orbp"]
[ext_resource type="PackedScene" uid="uid://cljywykme83pk" path="res://Weapons/ProjectileWeapon.tscn" id="30_nsjjg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oey58"]
radius = 11.0
height = 36.0

[sub_resource type="SpriteFrames" id="SpriteFrames_3ggsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qolrr")
}, {
"duration": 1.0,
"texture": ExtResource("4_4yq0u")
}, {
"duration": 1.0,
"texture": ExtResource("5_4jnnf")
}, {
"duration": 1.0,
"texture": ExtResource("6_ovd0p")
}, {
"duration": 1.0,
"texture": ExtResource("7_2qed7")
}, {
"duration": 1.0,
"texture": ExtResource("8_67cr0")
}, {
"duration": 1.0,
"texture": ExtResource("9_qlrrq")
}, {
"duration": 1.0,
"texture": ExtResource("10_k405t")
}, {
"duration": 1.0,
"texture": ExtResource("11_l7idy")
}, {
"duration": 1.0,
"texture": ExtResource("12_06nbi")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_uej87")
}, {
"duration": 1.0,
"texture": ExtResource("14_dmvs2")
}, {
"duration": 1.0,
"texture": ExtResource("15_s565p")
}],
"loop": false,
"name": &"Hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_o1ats")
}, {
"duration": 1.0,
"texture": ExtResource("17_rntk6")
}, {
"duration": 1.0,
"texture": ExtResource("18_633ie")
}, {
"duration": 1.0,
"texture": ExtResource("19_lk2ej")
}, {
"duration": 1.0,
"texture": ExtResource("20_j6py5")
}, {
"duration": 1.0,
"texture": ExtResource("21_0f1st")
}],
"loop": true,
"name": &"Idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_3iyn6")
}, {
"duration": 1.0,
"texture": ExtResource("23_hsr46")
}, {
"duration": 1.0,
"texture": ExtResource("24_qvk7n")
}, {
"duration": 1.0,
"texture": ExtResource("25_5a63g")
}, {
"duration": 1.0,
"texture": ExtResource("26_o2a2m")
}, {
"duration": 1.0,
"texture": ExtResource("27_ohcjh")
}, {
"duration": 1.0,
"texture": ExtResource("28_mvy6x")
}, {
"duration": 1.0,
"texture": ExtResource("29_ccdy8")
}],
"loop": true,
"name": &"Walk",
"speed": 15.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_5b45u")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -28)
shape = SubResource("CapsuleShape2D_oey58")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.75, 1.75)

[node name="UI" parent="." instance=ExtResource("30_8orbp")]

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2(0.05, 0.05)

[node name="Animations" type="AnimatedSprite2D" parent="Graphics"]
sprite_frames = SubResource("SpriteFrames_3ggsk")
animation = &"Hit"
offset = Vector2(0, -1024)

[node name="ProjectileWeapon" parent="." instance=ExtResource("30_nsjjg")]
position = Vector2(0, -22)

[connection signal="player_died" from="." to="ProjectileWeapon" method="_on_player_player_died"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="animation_finished" from="Graphics/Animations" to="." method="_on_animations_animation_finished"]
